--- a/localnet/kubernetes/path.yaml
+++ b/localnet/kubernetes/path.yaml
@@ -1,32 +1,35 @@
-#---
-#apiVersion: apps/v1
-#kind: Deployment
-#metadata:
-#  name: path-gateway
-#spec:
-#  replicas: 1
-#  selector:
-#    matchLabels:
-#      app: path-gateway
-#  template:
-#    metadata:
-#      labels:
-#        app: path-gateway
-#    spec:
-#      # TODO: Add resource limits
-#      containers:
-#        - name: path-gateway
-#          image: ghcr.io/buildwithgrove/path:sha-fcf75fe-rc
-#          ports:
-#            - containerPort: 3000
-#          volumeMounts:
-#            - name: path-gateway-config
-#              mountPath: /app/.config.yaml
-#      volumes:
-#        - name: path-gateway-config
-#          hostPath:
-#            type: File
-#            path: /home/red0ne/Job/pokt-network/poktroll/localnet/kubernetes/values-path.yaml
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: path-gateway
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: path-gateway
+  template:
+    metadata:
+      labels:
+        app: path-gateway
+    spec:
+      # TODO: Add resource limits
+      containers:
+        - name: path-gateway
+          image: ghcr.io/buildwithgrove/path:sha-fcf75fe-rc
+          ports:
+            - containerPort: 3000
+          volumeMounts:
+            - name: path-config
+              mountPath: /app/.config.yaml
+              subPath: .config.yaml
+      volumes:
+        - name: path-config
+          configMap:
+            name: path-config
+            items:
+              - key: path-config.yaml
+                path: .config.yaml
 ---
 apiVersion: v1
 kind: Service
