--- a/localnet/kubernetes/path-config.yaml
+++ b/localnet/kubernetes/path-config.yaml
@@ -2,12 +2,13 @@ shannon_config:
   full_node_config:
     rpc_url: tcp://validator-poktroll-validator:26657
     grpc_config:
-      host_port: tcp://validator-poktroll-validator:9090
+      host_port: validator-poktroll-validator:9090
+      insecure: true
     gateway_address: pokt15vzxjqklzjtlz7lahe8z2dfe9nm5vxwwmscne4
     gateway_private_key: 2d00ef074d9b51e46886dc9a1df11e7b986611d0f336bdcf1f0adce3e037ec0a
     delegated_app_addresses:
       - pokt1mrqt5f7qh8uxs27cjm9t7v9e74a9vvdnq5jva4
 
 services:
-  anvil:
+  "0021":
     alias: anvil
