--- a/localnet/kubernetes/path-config-1.yaml
+++ b/localnet/kubernetes/path-config-1.yaml
@@ -4,11 +4,14 @@ shannon_config:
     grpc_config:
       host_port: validator-poktroll-validator:9090
       insecure: true
+    # TODO: Allow sovereign soverign apps to sign their own relay requests.
     gateway_address: pokt15vzxjqklzjtlz7lahe8z2dfe9nm5vxwwmscne4
     gateway_private_key: cf09805c952fa999e9a63a9f434147b0a5abfd10f268879694c6b5a70e1ae177
+    # TODO: Populate delegated_app_addresses from on-chain records.
     delegated_app_addresses:
       - pokt1mrqt5f7qh8uxs27cjm9t7v9e74a9vvdnq5jva4
 
 services:
+  # Path needs 0021 service ID to handle EVM relays.
   "0021":
     alias: anvil
