--- a/localnet/kubernetes/values-relayminer-1.yaml
+++ b/localnet/kubernetes/values-relayminer-1.yaml
@@ -5,7 +5,7 @@ config:
 
   default_signing_key_names: [supplier1]
   suppliers:
-    - service_id: "anvil"
+    - service_id: anvil
       listen_url: http://0.0.0.0:8545
       service_config:
         backend_url: http://anvil:8547/
