--- a/localnet/kubernetes/values-pocketdex-gql-engine.yaml
+++ b/localnet/kubernetes/values-pocketdex-gql-engine.yaml
@@ -1,14 +1,13 @@
+enable_graphiql_playground: true
+indexer_endpoint: "http://indexer-service:3000"
+port: 3000
 env:
   NODE_ENV: development
-  # Testnet
-  ENDPOINT: "https://testnet-validated-validator-rpc.poktroll.com"
   # LocalNet
-  # ENDPOINT: "http://validator-poktroll-validator.default.svc.cluster.local:26657"
+  ENDPOINT: "http://validator-poktroll-validator:26657"
   CHAIN_ID: "poktroll"
   # db schema name
   DB_SCHEMA: "localnet"
-  # indexer endpoint
-#  indexer_endpoint: "http://pocketdex-indexer.default.svc.cluster.local:3000"
 
   START_BLOCK: 1
   # Check docs to see what else you can set here:
