--- a/.github/workflows/consensuswarn.yml
+++ b/.github/workflows/consensuswarn.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: orijtech/consensuswarn@main
         with:
-          # Available BaseApp roots: `go doc github.com/cosmos/cosmos-sdk/baseapp.BaseApp`
+          # Available BaseApp roots: `go doc github.com/pokt-network/poktroll/app.App`
           #
           # TODO_CONSIDER: CURRENTLY MAY BE TOO VERBOSE. Consider removing functions that cause excessive noise or false positives.
           #
@@ -64,4 +64,4 @@ jobs:
           # SimTxFinalizeBlock:
           #   Simulates a finalized block for testing and debugging purposes.
           #   Less critical, but could be monitored for changes that may affect testing and simulation behavior.
-          roots: github.com/cosmos/cosmos-sdk/baseapp.BaseApp.PrepareProposal,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.ProcessProposal,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.FinalizeBlock,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.Commit,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.VerifyVoteExtension,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.ExtendVote,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.CheckTx,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.InitChain,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.StoreConsensusParams,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.SimDeliver,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.SimTxFinalizeBlock
+          roots: github.com/pokt-network/poktroll/app.App.PrepareProposal,github.com/pokt-network/poktroll/app.App.ProcessProposal,github.com/pokt-network/poktroll/app.App.FinalizeBlock,github.com/pokt-network/poktroll/app.App.Commit,github.com/pokt-network/poktroll/app.App.VerifyVoteExtension,github.com/pokt-network/poktroll/app.App.ExtendVote,github.com/pokt-network/poktroll/app.App.CheckTx,github.com/pokt-network/poktroll/app.App.InitChain,github.com/pokt-network/poktroll/app.App.StoreConsensusParams,github.com/pokt-network/poktroll/app.App.SimDeliver,github.com/pokt-network/poktroll/app.App.SimTxFinalizeBlock
