--- a/.github/workflows/consensuswarn.yml
+++ b/.github/workflows/consensuswarn.yml
@@ -14,8 +14,11 @@ jobs:
       - uses: actions/checkout@v4
       - uses: orijtech/consensuswarn@main
         with:
-          # Available BaseApp roots: `go doc github.com/cosmos/cosmos-sdk/baseapp.BaseApp`
+          # Available BaseApp roots:
+          # - `go doc github.com/cosmos/cosmos-sdk/baseapp.BaseApp`
+          # - `go doc github.com/cosmos/cosmos-sdk/runtime.App`
           #
+          # TODO_IN_THIS_PR: test. Does this even work with an app that uses `depinject`?
           # TODO_CONSIDER: CURRENTLY MAY BE TOO VERBOSE. Consider removing functions that cause excessive noise or false positives.
           #
           # Critical consensus-related functions to monitor:
@@ -35,6 +38,14 @@ jobs:
           # Commit:
           #   Commits the application state after the block has been processed.
           #   Any changes here could impact state transitions and consensus.
+          #
+          # BeginBlock:
+          #   Executes logic at the start of a new block.
+          #   Changes here can influence the block initialization and its validity.
+          #
+          # EndBlock:
+          #   Executes logic at the end of the block before committing.
+          #   Can be crucial for final state updates that ensure consensus.
           #
           # VerifyVoteExtension:
           #   Verifies extended votes in the consensus process (Tendermint).
@@ -64,5 +75,4 @@ jobs:
           # SimTxFinalizeBlock:
           #   Simulates a finalized block for testing and debugging purposes.
           #   Less critical, but could be monitored for changes that may affect testing and simulation behavior.
-          roots: github.com/cosmos/cosmos-sdk/runtime.App.BeginBlocker,github.com/cosmos/cosmos-sdk/runtime.App.EndBlocker,github.com/cosmos/cosmos-sdk/runtime.App.PreBlocker,github.com/cosmos/cosmos-sdk/runtime.App.Precommiter
-          # roots: github.com/cosmos/cosmos-sdk/baseapp.BaseApp.PrepareProposal,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.ProcessProposal,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.FinalizeBlock,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.Commit,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.VerifyVoteExtension,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.ExtendVote,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.CheckTx,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.InitChain,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.StoreConsensusParams,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.SimDeliver,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.SimTxFinalizeBlock
+          roots: github.com/cosmos/cosmos-sdk/baseapp.BaseApp.PrepareProposal,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.ProcessProposal,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.FinalizeBlock,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.Commit,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.VerifyVoteExtension,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.ExtendVote,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.CheckTx,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.InitChain,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.StoreConsensusParams,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.SimDeliver,github.com/cosmos/cosmos-sdk/baseapp.BaseApp.SimTxFinalizeBlock,github.com/cosmos/cosmos-sdk/runtime.App.BeginBlocker,github.com/cosmos/cosmos-sdk/runtime.App.EndBlocker,github.com/cosmos/cosmos-sdk/runtime.App.PreBlocker,github.com/cosmos/cosmos-sdk/runtime.App.Precommiter
