--- a/.github/workflows/label-actions.yml
+++ b/.github/workflows/label-actions.yml
@@ -18,5 +18,5 @@ jobs:
   action:
     runs-on: ubuntu-latest
     steps:
-      # TODO: switch to `dessant/label-actions@v3` when https://github.com/dessant/label-actions/pull/29 is merged.
+      # TODO_TECHDEBT: switch to `dessant/label-actions@v3` when https://github.com/dessant/label-actions/pull/29 is merged.
       - uses: okdas/label-actions@patch-1
