[Observability] Foundation for load testing telemetry (#832)
## Summary

Refactor the foundation for E2E tokenomics observability w/ lots of new
data points.

Key changes include:
- `x/tokenomics` telemetry
- Begin/End blockers execution time management
- Custom `poktroll` telemetry config in `app.toml`

## Issue

- #762

---------

Co-authored-by: Daniel Olshansky <olshansky.daniel@gmail.com>

--- a/localnet/poktrolld/config/app.toml
+++ b/localnet/poktrolld/config/app.toml
@@ -34,6 +34,11 @@ query-gas-limit = "0"
 [mempool]
   max-txs = 10000
 
+[poktroll]
+
+  [poktroll.telemetry]
+    cardinality-level = "high"
+
 [rpc]
   cors_allowed_origins = ["*"]
 
@@ -56,6 +61,6 @@ query-gas-limit = "0"
   enabled = true
   global-labels = []
   metrics-sink = "mem"
-  prometheus-retention-time = "600"
+  prometheus-retention-time = 86400
   service-name = ""
   statsd-addr = ""
