--- a/localnet/kubernetes/path-config-3.yaml
+++ b/localnet/kubernetes/path-config-3.yaml
@@ -8,6 +8,7 @@ shannon_config:
     gateway_private_key: f73b6f7f0b9c99603c7eeddbf1c419c6f6bbc241f3798e3e4c8da9769ca81c26
     delegated_app_addresses:
       - pokt1mrqt5f7qh8uxs27cjm9t7v9e74a9vvdnq5jva4 # app3
+    lazy_mode: true
 
 services:
   "anvil":
