--- a/config.yml
+++ b/config.yml
@@ -87,7 +87,7 @@ validators:
     app:
       # DEV_NOTE: Ignite does not carry over all defaults, so we are going to match `minimum-gas-prices` with `cmd/config.go`.
       # See the enhancement request here: https://github.com/ignite/cli/issues/4340
-      # TODO_MAINNET(#794): turn on `minimum-gas-prices` back
+      # TODO_BETA(@okdas, #794): turn on `minimum-gas-prices` back
       # minimum-gas-prices: 0.000000001upokt
       telemetry:
         enabled: true
@@ -128,9 +128,7 @@ genesis:
     staking:
       params:
         bond_denom: upokt
-        # TODO_MAINNET: Figure out what this should be on Shannon
-        # re-genesis. We're setting it to 1 for Alpha TestNet #1 so Grove
-        # maintains the only validator until Alpha TestNet #2.
+        # TODO_BETA(@okdas): Update this to 10 for Beta TestNet.
         max_validators: 1
     crisis:
       constant_fee:
@@ -170,7 +168,7 @@ genesis:
       params:
         max_delegated_gateways: "7"
         min_stake:
-          # TODO_MAINNET: Determine realistic amount for minimum application stake amount.
+          # TODO_BETA(@bryanchriswhite): Determine realistic amount for minimum application stake amount.
           amount: "100000000" # 100 POKT
           denom: upokt
       applicationList:
@@ -196,7 +194,7 @@ genesis:
             denom: upokt
     supplier:
       params:
-        # TODO_MAINNET: Determine realistic amount for minimum gateway stake amount.
+        # TODO_BETA(@bryanchriswhite): Determine realistic amount for minimum gateway stake amount.
         min_stake:
           amount: "1000000" # 1 POKT
           denom: upokt
@@ -235,7 +233,7 @@ genesis:
             denom: upokt
     gateway:
       params:
-        # TODO_MAINNET: Determine realistic amount for minimum gateway stake amount.
+        # TODO_BETA(@bryanchriswhite): Determine realistic amount for minimum gateway stake amount.
         min_stake:
           amount: "1000000" # 1 POKT
           denom: upokt
