--- a/config.yml
+++ b/config.yml
@@ -274,6 +274,9 @@ genesis:
         proof_submission_fee:
           amount: "1000000"
           denom: upokt
+    session:
+      params:
+        num_suppliers_per_session: 15
     shared:
       params:
         num_blocks_per_session: 10
