--- a/config.yml
+++ b/config.yml
@@ -147,7 +147,8 @@ genesis:
         # Application module
         - address: pokt1rl3gjgzexmplmds3tq3r3yk84zlwdl6djzgsvm
           coins:
-            # TODO_MAINNET: Pass config.yml into ChatGPT to build a script that ensures the amounts line up
+            # TODO_MAINNET(@olshansk): Pass config.yml into ChatGPT to build a script
+            # that ensures the amounts line up
             - amount: "200000136" # MUST BE equal to the total of all app stakes below
               denom: upokt
         # Supplier module
