--- a/config.yml
+++ b/config.yml
@@ -284,6 +284,8 @@ genesis:
         mint_allocation_supplier: 0.7
         mint_allocation_source_owner: 0.15
         mint_allocation_application: 0.0
+        # The dao reward address SHOULD match that of the "pnf" below (i.e. `make poktrolld_addr ACC_NAME=pnf`).
+        # This is the address that will receive the dao/foundation rewards during claim settlement (global mint TLM).
         dao_reward_address: "pokt1eeeksh2tvkh7wzmfrljnhw4wrhs55lcuvmekkw"
     shared:
       params:
