--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -29,6 +29,8 @@ jobs:
   #   Example failure: TODO_UPNEXT: <do something>
   #   Example non-failure: TODO_UPNEXT(@olshansk): <do something>
   # See https://github.com/pokt-network/action-fail-on-found
+  # TODO_IMPROVE: Add more details to the errors
+  #   Ref: https://github.com/pokt-network/poktroll/pull/896#pullrequestreview-2415490611
   check_todo_upnext:
     name: Check TODO_UPNEXT
     runs-on: ubuntu-latest
