--- a/config.yml
+++ b/config.yml
@@ -288,6 +288,7 @@ genesis:
         mint_allocation_application: 0.0
         # The dao reward address SHOULD match that of the "pnf" below (i.e. `make poktrolld_addr ACC_NAME=pnf`).
         # This is the address that will receive the dao/foundation rewards during claim settlement (global mint TLM).
+        # TODO_MAINNER(@olshansk): Consolidate the usage of DAO/PNF throughout the configs & codebase.
         dao_reward_address: "pokt1eeeksh2tvkh7wzmfrljnhw4wrhs55lcuvmekkw"
     shared:
       params:
