--- a/config.yml
+++ b/config.yml
@@ -88,7 +88,7 @@ validators:
       # DEV_NOTE: Ignite does not carry over all defaults, so we are going to match `minimum-gas-prices` with `cmd/config.go`.
       # See the enhancement request here: https://github.com/ignite/cli/issues/4340
       # TODO_BETA(@okdas, #794): turn on `minimum-gas-prices` back
-      # minimum-gas-prices: 0.000000001upokt
+      minimum-gas-prices: 0.000000001upokt
       telemetry:
         enabled: true
       poktroll:
@@ -106,6 +106,8 @@ validators:
       log_level: "info"
     client:
       chain-id: poktroll
+      gas-prices: 0.000000001upokt
+      gas: auto
 
 # We can persist arbitrary genesis values via 1 to 1 mapping to genesis.json
 genesis:
