--- a/localnet/kubernetes/path-config-2.yaml
+++ b/localnet/kubernetes/path-config-2.yaml
@@ -4,12 +4,12 @@ shannon_config:
     grpc_config:
       host_port: validator-poktroll-validator:9090
       insecure: true
-    gateway_address: pokt15w3fhfyc0lttv7r585e2ncpf6t2kl9uh8rsnyz # gateway2
-    gateway_private_key: 177ba43cec962ea407f71da9c3994ba685708e82d5d7a6d7da3268e74119bf88
-    delegated_app_addresses:
-      - pokt1mrqt5f7qh8uxs27cjm9t7v9e74a9vvdnq5jva4 # app1
     lazy_mode: true
+  gateway_config:
+    gateway_address: pokt15w3fhfyc0lttv7r585e2ncpf6t2kl9uh8rsnyz # gateway2
+    gateway_hex_private_key: 177ba43cec962ea407f71da9c3994ba685708e82d5d7a6d7da3268e74119bf88
+    gateway_mode: delegated
 
 services:
-  "anvil":
+  anvil:
     alias: anvil
