--- a/localnet/kubernetes/path-config-3.yaml
+++ b/localnet/kubernetes/path-config-3.yaml
@@ -4,12 +4,12 @@ shannon_config:
     grpc_config:
       host_port: validator-poktroll-validator:9090
       insecure: true
-    gateway_address: pokt1zhmkkd0rh788mc9prfq0m2h88t9ge0j83gnxya # gateway3
-    gateway_private_key: f73b6f7f0b9c99603c7eeddbf1c419c6f6bbc241f3798e3e4c8da9769ca81c26
-    delegated_app_addresses:
-      - pokt1mrqt5f7qh8uxs27cjm9t7v9e74a9vvdnq5jva4 # app3
     lazy_mode: true
+  gateway_config:
+    gateway_address: pokt1zhmkkd0rh788mc9prfq0m2h88t9ge0j83gnxya # gateway3
+    gateway_hex_private_key: f73b6f7f0b9c99603c7eeddbf1c419c6f6bbc241f3798e3e4c8da9769ca81c26
+    gateway_mode: delegated
 
 services:
-  "anvil":
+  anvil:
     alias: anvil
