[Docs] Beta TestNet - Service Cheatsheet (#965)
Cheatsheet to add a new onchain `Service` plus a few other improvements.

- Add a service quickstart
- Update `.gitignore` w/ a few config files
- Add `tl;dr` to `CLI installation` and use account setup`
- Add instructions on creating a new Debian user

---

Co-authored-by: Redouane Lakrache <r3d0ne@gmail.com>
Co-authored-by: Dima K. <okdas@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,8 @@ job.yaml
 
 # tmp directory for locally produced artifacts
 tmp/*
+
+# Common testing configurations
+relayminer_config.yaml
+gateway_config.yaml
+path_config.yaml
