feat: Support local deployment

--- a/config.yml
+++ b/config.yml
@@ -258,7 +258,7 @@ genesis:
         target_num_relays: 100000
       serviceList:
         - id: anvil
-          name: anvil
+          name: "anvil"
           compute_units_per_relay: 1
           owner_address: pokt1cwnu460557x0z78jv3hhc7356hhkrgc86c87q5
         - id: ollama
