--- a/.env.dev
+++ b/.env.dev
@@ -7,8 +7,7 @@ POKTROLLD_HOME=./localnet/poktrolld
 POCKET_NODE=tcp://127.0.0.1:26657
 # TestNet RPC endpoint for validator maintained by Grove. Needs to be updated if there's another "primary" testnet.
 TESTNET_RPC=https://testnet-validated-validator-rpc.poktroll.com/
-APPGATE_SERVER=http://localhost:42069
-GATEWAY_URL=http://localhost:42079
+PATH_URL=http://localhost:3000
 POCKET_ADDR_PREFIX=pokt
 CHAIN_ID=poktroll
 
