--- a/.github/workflows-helpers/run-e2e-test-job-template.yaml
+++ b/.github/workflows-helpers/run-e2e-test-job-template.yaml
@@ -11,7 +11,7 @@ spec:
         pokt.network/purpose: e2e-tests
     spec:
       initContainers:
-        # We need to make sure the services like validator, relayminer, appgate server, etc. work before we execute
+        # We need to make sure the services like validator, relayminer, PATH, etc. work before we execute
         # an e2e test.
         - name: check-services
           image: ruby:3.0
@@ -49,8 +49,8 @@ spec:
               value: "false" # Flip to true to see the command and result of the execution
             - name: POKTROLLD_HOME
               value: /root/.poktroll
-            - name: PATH_URL
-              value: http://${NAMESPACE}-path:3000
+            - name: PATH_HOST
+              value: ${NAMESPACE}-path:3000
           volumeMounts:
             - mountPath: /root/.poktroll/keyring-test/
               name: writable-keys-volume
