--- a/localnet/kubernetes/config-path-1.yaml
+++ b/localnet/kubernetes/config-path-1.yaml
@@ -9,6 +9,8 @@ shannon_config:
     gateway_mode: delegated
     gateway_address: pokt15vzxjqklzjtlz7lahe8z2dfe9nm5vxwwmscne4 # gateway1
     gateway_private_key_hex: cf09805c952fa999e9a63a9f434147b0a5abfd10f268879694c6b5a70e1ae177
+    owned_apps_private_keys_hex:
+    
 
 services:
   anvil:
