[LocalNet] Replace `AppGateServer` with `Path` in `LocalNet` (#879)
## Summary

Add PATH to Tilt so it could run on LocalNet for E2E tests and local
load testing.

## Issue

In order to deprecate AppGate server and have better integration with
the production gateway component, Path needs to run on LocalNet for both
E2E test and load testing.

- #838 

## Type of change

- [x] New feature, functionality or library

## Testing

- [x] **LocalNet E2E Tests**: `make test_e2e`
- [ ] **DevNet E2E Tests**: Add the `devnet-test-e2e` label to the PR.

## Sanity Checklist

- [x] I have tested my changes using the available tooling
- [ ] I have commented my code
- [x] I have performed a self-review of my own code; both comments &
source code
- [ ] I create and reference any new tickets, if applicable
- [ ] I have left TODOs throughout the codebase, if applicable

---------

Co-authored-by: Daniel Olshansky <olshansky.daniel@gmail.com>
Co-authored-by: Dmitry K <okdas@pm.me>
Co-authored-by: Dima K. <okdas@users.noreply.github.com>

--- a/.env.dev
+++ b/.env.dev
@@ -7,13 +7,12 @@ POKTROLLD_HOME=./localnet/poktrolld
 POCKET_NODE=tcp://127.0.0.1:26657
 # TestNet RPC endpoint for validator maintained by Grove. Needs to be updated if there's another "primary" testnet.
 TESTNET_RPC=https://testnet-validated-validator-rpc.poktroll.com/
-APPGATE_SERVER=http://localhost:42069
-GATEWAY_URL=http://localhost:42079
+PATH_URL=http://localhost:3000
 POCKET_ADDR_PREFIX=pokt
 CHAIN_ID=poktroll
 
 # The domain ending in ".town" is staging, ".city" is production
-GROVE_GATEWAY_STAGING_ETH_MAINNET=https://eth-mainnet.rpc.grove.town
+GROVE_PORTAL_STAGING_ETH_MAINNET=https://eth-mainnet.rpc.grove.town
 # The "protocol" field here instructs the Grove gateway which network to use
 JSON_RPC_DATA_ETH_BLOCK_HEIGHT='{"protocol": "shannon-testnet","jsonrpc":"2.0","id":"0","method":"eth_blockNumber", "params": []}'
 
