--- a/load-testing/loadtest_manifest_example.yaml
+++ b/load-testing/loadtest_manifest_example.yaml
@@ -2,9 +2,9 @@
 # It is intended to target a remote environment, such as a devnet or testnet.
 is_ephemeral_chain: false
 
-# testnet_node is the URL of the node that the load test will use to query the
+# pocket_node is the URL of the node that the load test will use to query the
 # chain and submit transactions.
-testnet_node: https://devnet-sophon-validator-rpc.poktroll.com
+pocket_node: https://devnet-sophon-validator-rpc.poktroll.com
 
 # The service ID to request relays from.
 service_id: "anvil"
