--- a/load-testing/loadtest_manifest_localnet.yaml
+++ b/load-testing/loadtest_manifest_localnet.yaml
@@ -52,12 +52,12 @@ gateways:
 
   # Gateway 1; http://localhost:10350/r/gateway1/overview
   - address: pokt15vzxjqklzjtlz7lahe8z2dfe9nm5vxwwmscne4
-    exposed_url: http://localhost:3000/v1 # The gateway url that the user sends relays to (e.g. curl)
+    exposed_url: http://localhost:3000/v1/ # The gateway url that the user sends relays to (e.g. curl)
 
   # Gateway 2; http://localhost:10350/r/gateway2/overview
   - address: pokt15w3fhfyc0lttv7r585e2ncpf6t2kl9uh8rsnyz
-    exposed_url: http://localhost:3001/v1
+    exposed_url: http://localhost:3001/v1/
 
   # Gateway 3; http://localhost:10350/r/gateway3/overview
   - address: pokt1zhmkkd0rh788mc9prfq0m2h88t9ge0j83gnxya
-    exposed_url: http://localhost:3002/v1
+    exposed_url: http://localhost:3002/v1/
