--- a/tools/scripts/relay_spam/Gemfile
+++ b/tools/scripts/relay_spam/Gemfile
@@ -3,5 +3,6 @@ source 'https://rubygems.org'
 gem 'concurrent-ruby', '~> 1.2'
 gem 'ostruct'
 gem 'logger'
+gem 'net-http-persistent'
 # gem 'optparse'
 # gem 'yaml' 
