do better async

--- a/tools/scripts/relay_spam/Gemfile
+++ b/tools/scripts/relay_spam/Gemfile
@@ -3,5 +3,8 @@ source 'https://rubygems.org'
 gem 'concurrent-ruby', '~> 1.2'
 gem 'ostruct'
 gem 'logger'
+gem 'async'
+gem 'async-http'
+gem 'async-io'
 # gem 'optparse'
 # gem 'yaml' 
